--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,5 @@
 spring.application.name=jwtcors
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/demo_db
-spring.datasource.username=postgres
-spring.datasource.password=campus2023
-
 server.port = 8080
 
 spring.jpa.hibernate.ddl-auto=update
@@ -11,3 +7,9 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 spring.main.allow-circular-references=true
+
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate-ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO}
